# Game-Addiction-Cure

./: .gitignore  app_usage.json  asd.py  config.py  dummpy.py  gui.py  main.py  process_utils.py  proof.py  pyproject.toml  readme.md  requirements.txt  time_allocation.py  write.py
components/: app_list.py  graph.py
data/: config.json
tracker/: load_config.py  process_utils.py  time_allocation.py  tracker.py  tui.py  write_session_info.py
tracker/data/: config.json
tracker/styles/: styles.tcss
utilities/: process_utils.py
