[project]
name = "tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Z33shan-Aamir",email = "zeeshanaamir29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutils (>=3.3.11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts] 
app-tracker = "tracker.tracker:run"